--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "^0.14.10"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.16",
@@ -34,7 +34,7 @@
     "@types/node": "^12.11.1",
     "angular-cli-ghpages": "^1.0.0-rc.2",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^5.9.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.1.0",
